# mai-software-engineering

./: .gitignore  README.md
lab1/: README.md
lab1/dsl/: workspace.dsl  workspace.json
lab2/: README.md  docker-compose.yml  env.example
lab2/src/api-gateway/: Dockerfile  README.md  pyproject.toml
lab2/src/planning-service/: env.example  pyproject.toml
lab2/src/planning-service/planning_service/: config.py  main.py
lab2/src/planning-service/planning_service/models/: __init__.py
lab2/src/planning-service/planning_service/services/: plans_service.py  transactions_service.py
lab2/tests/: test_api_gateway.py
lab3/: .gitignore  README.md  docker-compose.yml
lab3/src/api-gateway/: env.example
lab3/src/planning-service/: Dockerfile  env.example  (+1 more)
lab3/tests/: README.md  conftest.py  test_planning_service.py
lab4/: Makefile  README.md  docker-compose.yml  env.example  env.local.example  pytest.ini
lab4/src/planning-service/: pyproject.toml
lab4/src/planning-service/alembic/: env.py
lab4/src/planning-service/planning_service/: config.py  dependencies.py  main.py
lab4/src/planning-service/planning_service/api/: plans.py
lab4/src/planning-service/planning_service/database/: __init__.py
lab4/src/planning-service/planning_service/models/: mongodb_models.py
lab4/src/planning-service/planning_service/services/: analytics_service.py
lab4/tests/: test_api.py  test_mongodb.py
lab5/: Makefile  README.md  docker-compose.yml  test_mongodb_example.py  test_redis_integration.py
lab5/init-mongo/: init-transactions.js
lab5/tests/: test_integration.py
(+50 files in other folders)
